--- a/Affine_transformation_2/Affine_transformation_main.ipynb
+++ b/Affine_transformation_2/Affine_transformation_main.ipynb
@@ -509,9 +509,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PyCharm (Digital_imaging_processing)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "pycharm-8bf0ea06"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -523,7 +523,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.9.10+"
   }
  },
  "nbformat": 4,
