增加仓库地址

--- a/Frequency_Domain_Filtering_4/Frequency_Domain_Filtering_main.ipynb
+++ b/Frequency_Domain_Filtering_4/Frequency_Domain_Filtering_main.ipynb
@@ -22,7 +22,12 @@
     "\n",
     "**课程名称：**数字图像处理II\n",
     "\n",
-    "**授课教师：**陈允杰教授"
+    "**授课教师：**陈允杰教授\n",
+    "\n",
+    "## 源代码仓库地址\n",
+    "**github:** https://github.com/Alephant6/Digital_imaging_processing\n",
+    "\n",
+    "**gitee:** https://gitee.com/qiang-shengzhou/Digital_imaging_processing"
    ]
   },
   {
