--- a/Frequency_Domain_Filtering_4/Frequency_Domain_Filtering_main.ipynb
+++ b/Frequency_Domain_Filtering_4/Frequency_Domain_Filtering_main.ipynb
@@ -32,7 +32,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# 一、作业要求\n",
     "实现以下内容\n",
@@ -43,7 +47,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# 二、理论介绍\n",
     "## 1. 理想低通滤波器\n",
@@ -104,14 +112,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# 三、实验以及结果"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## 1. 导入库"
    ]
@@ -119,7 +135,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# @Author: Alephant——QSZ\n",
@@ -146,7 +166,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### 2.1. 绘制三维透视图"
    ]
@@ -154,7 +178,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def drawPerspective(handleax,input_matrix,title=None,cmap = \"gray\"):\n",
@@ -212,7 +240,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### 2.3. 绘制平面图"
    ]
@@ -220,7 +252,11 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def drawPanel(handleax,input_matrix,title=None,cmap = \"gray\"):\n",
@@ -244,7 +280,11 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def drawCurv(handleax,functions,labels,filter_d0,title=None,cmap = \"gray\"):\n",
@@ -664,7 +704,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### 6.2. 高斯高通滤波器 GLPF"
    ]
@@ -711,7 +755,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# 四、参考资料\n",
     "[1]“Low-pass filter,” Wikipedia. Aug. 16, 2021. Accessed: Mar. 22, 2022. [Online]. Available: https://en.wikipedia.org/w/index.php?title=Low-pass_filter&oldid=1039066300\n",
