--- a/Spatial_Filters_3/Spatial_Filters_main.ipynb
+++ b/Spatial_Filters_3/Spatial_Filters_main.ipynb
@@ -2,7 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# 第三次课堂作业——空间滤波\n",
     "\n",
@@ -21,7 +25,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# 一、作业要求\n",
     "- 查阅网络的空间滤波并实验\n",
@@ -163,14 +171,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# 三、实验以及结果"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## 1. 导入库"
    ]
@@ -194,7 +210,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## 2. 使用三个比较特殊的滤波器\n",
     "OpenCV使用filter2D方法对图像进行滤波，为了演示滤波，这里使用三个比较特殊的滤波器核进行实验"
@@ -203,7 +223,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -254,7 +278,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "三个滤波器分别如kernel1-3所示，第一个核是锐化核，图像锐化会增强图像的边缘及灰度跳变的部分，第二个核是一个边缘检测核，可以检测图像的边缘，最后一个核会让图像显示出浮雕的效果。\n",
     "\n",
@@ -263,7 +291,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## 3. 定义噪声函数"
    ]
@@ -271,7 +303,11 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# 添加椒盐噪声\n",
@@ -338,7 +374,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## 4. 几个常用滤波器\n",
     "图像处理领域有一些常用的滤波方式（图像模糊），直接提供了相应的接口。看下面的例子，待处理的图像是zyw图像带有椒盐噪声的图片。\n",
@@ -349,7 +389,11 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -389,7 +433,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "可以看到，对于去除椒盐噪声，使用均值滤波和中值滤波可以得到比较好的结果，但是高斯滤波和双边滤波则不是很好。\n",
     "\n",
@@ -399,7 +447,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# 四、参考资料\n",
     "\n",
